--- a/index.html
+++ b/index.html
@@ -6,22 +6,31 @@
     <title>Stevens Book House</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body>
+<body style="background: url('./assets/Library.jpg');">
+    <img src="./assets/Library.jpg" alt="">
     <header>
         <h1>Stevens Book House</h1>
     </header>
     <h4>Welcome Book Lover</h4>
     <p>Please choose the specific book you would like a summary for:</p>
-    <section class="upper-body">
-        <div class="birds">
-            <div class="mockingbird-box">
-                <img src="./assets/mockingbird.jpg" class="mockingbird" alt="mockingbird">
+    <section>
+        <div class="box">
+            <div class="box">
+                <img src="./assets/mockingbird.jpg" class="mockingbird" alt="">
                 <a href="#">To Kill A Mockingbird</a>
             </div>
-            <img src="./assets/crow close up.jpg" alt="close up of crow">
-            <a href="#">Crows: Death Behind Eyes</a>
-            <img src="./assets/circle of birds.jpg" alt="birds flocking">
-            <a href="#">Waka Flaka Birds</a>
+        </div>
+        <div class="box">
+            <div class="crow-box">
+                <img src="./assets/crow close up.jpg" class ="crow" alt="">
+                <a href="#">Crows: Deaths Vision</a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="birds-box">
+                <img src="./assets/circle of birds.jpg" class="birds" alt="">
+                <a href="#">Waka Flaka Birds</a>
+            </div>
         </div>
     </section>
 </body>
