added more books

--- a/index.html
+++ b/index.html
@@ -6,23 +6,37 @@
     <title>Stevens Book House</title>
     <link rel="stylesheet" href="./styles.css">
 </head>
-<body style="background: url('./assets/Library.jpg');">
+<body>
     <header>
-        <h1>Stevens Book House</h1>
+        <div class="header-box">
+            <h1>Stevens Book House</h1>      
+        </div>
     </header>
-    <h4>Welcome Book Lover</h4>
+    <h3>Welcome Book Lover</h3>
     <p>Please choose the specific book you would like a summary for:</p>
     <section>
         <div class="box">
-            <div class="box">
-                <img src="./assets/mockingbird.jpg" class="mockingbird" alt="">
-                <a href="#">To Kill A Mockingbird</a>
+            <div class="">
+                <img src="./assets/mockingbird(small).jpg" class="mockingbird" alt="">
+                <a href="https://en.wikipedia.org/wiki/To_Kill_a_Mockingbird">To Kill A Mockingbird</a>
+            </div>
+        </div>
+        <div class="">
+            <div class="crow-box">
+                <img src="./assets/crow close up.jpg" class ="crow" alt="">
+                <a href="https://en.wikipedia.org/wiki/Crow">Crows: Deaths Vision</a>
+            </div>
+        </div>
+        <div class="box">
+            <div class="birds-box">
+                <img src="./assets/circle of birds.jpg" class="birds" alt="">
+                <a href="https://en.wikipedia.org/wiki/Waka_Flocka_Flame">Waka Flaka Birds</a>
             </div>
         </div>
         <div class="box">
             <div class="crow-box">
-                <img src="./assets/crow close up.jpg" class ="crow" alt="">
-                <a href="#">Crows: Deaths Vision</a>
+                <img src="./assets/game of birds.jpeg" class ="crow" alt="">
+                <a href="https://en.wikipedia.org/wiki/Game_of_Thrones">Game of Birds</a>
             </div>
         </div>
         <div class="box">
@@ -31,6 +45,10 @@
                 <a href="#">Waka Flaka Birds</a>
             </div>
         </div>
+        <footer>
+            <a href="/Stevens-Book-House/index.html">Back To The Top</a>
+        </footer>
+
     </section>
 </body>
 </html>
