--- a/index.html
+++ b/index.html
@@ -16,33 +16,33 @@
     <p>Please choose the specific book you would like a summary for:</p>
     <section>
         <div class="box">
-            <div class="">
-                <img src="./assets/mockingbird(small).jpg" class="mockingbird" alt="">
+            <div class="container">
+                <img src="./assets/mockingbird(small).jpg" class="mockingbird" alt="mockingbird on leaf">
                 <a href="https://en.wikipedia.org/wiki/To_Kill_a_Mockingbird">To Kill A Mockingbird</a>
             </div>
         </div>
-        <div class="">
-            <div class="crow-box">
-                <img src="./assets/crow close up.jpg" class ="crow" alt="">
+        <div class="box">
+            <div class="container">
+                <img src="./assets/crow close up.jpg" class ="crow" alt="close up of crow">
                 <a href="https://en.wikipedia.org/wiki/Crow">Crows: Deaths Vision</a>
             </div>
         </div>
         <div class="box">
-            <div class="birds-box">
-                <img src="./assets/circle of birds.jpg" class="birds" alt="">
+            <div class="container">
+                <img src="./assets/circle of birds.jpg" class="birds" alt="circle of birds">
                 <a href="https://en.wikipedia.org/wiki/Waka_Flocka_Flame">Waka Flaka Birds</a>
             </div>
         </div>
         <div class="box">
-            <div class="crow-box">
-                <img src="./assets/game of birds.jpeg" class ="crow" alt="">
+            <div class="container">
+                <img src="./assets/game of birds.jpeg" class ="crow" alt="badass bird">
                 <a href="https://en.wikipedia.org/wiki/Game_of_Thrones">Game of Birds</a>
             </div>
         </div>
         <div class="box">
-            <div class="birds-box">
-                <img src="./assets/circle of birds.jpg" class="birds" alt="">
-                <a href="#">Waka Flaka Birds</a>
+            <div class="container">
+                <img src="./assets/blue bird.jpg" class="birds" alt="blue bird">
+                <a href="https://en.wikipedia.org/wiki/The_Bluebird_Books">The Blue Birds</a>
             </div>
         </div>
         <footer>
