--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
             </div>
         </div>
         <footer>
-            <a href="/Stevens-Book-House/index.html">Back To The Top</a>
+            <a href="#">Back To The Top</a>
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSe17pl1WERa8T6h_IUG0EQzc0-oUI-qWJ8V9CmCSPnPPyFnww/viewform?usp=sharing">Give Feedback</a>
         </footer>
 
     </section>
