--- a/index.html
+++ b/index.html
@@ -12,8 +12,19 @@
             <h1>Stevens Book House</h1>      
         </div>
     </header>
-        <h3>Welcome Book Lover</h3>
-        <p>Please choose the specific book you would like a summary for:</p>
+        <section>
+            <div class="sub-header-box">
+                <h3>Welcome Book Lover</h3>   
+            </div>
+        </section>
+        <section>
+            <div class="option-box">
+                <p>Please choose the specific book you would like a summary for:</p>
+            </div>
+            
+        </section>
+
+
     <section>
         <div class="box">
             <div class="container">
